--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 </nav>
             </div>
 
-            <h1 class="INstruction">INSTRUCTION FOR THE GAME</h1>
+            <h1 class="Instruction">INSTRUCTION FOR THE GAME</h1>
 
         </header>
 
